# ChangeLog for www-servers/nginx
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.89 2006/04/26 14:55:59 voxus Exp $

*nginx-0.3.42 (26 Apr 2006)

  26 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.42.ebuild,
  -nginx-0.3.41.ebuild:
  Bump.

*nginx-0.3.41 (22 Apr 2006)

  22 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.41.ebuild,
  -nginx-0.3.40.ebuild:
  Bump.

*nginx-0.3.40 (20 Apr 2006)

  20 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.40.ebuild,
  -nginx-0.3.39.ebuild:
  Bump.

*nginx-0.3.39 (17 Apr 2006)

  17 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.3.38.ebuild,
  +nginx-0.3.39.ebuild:
  Bump.

*nginx-0.3.38 (14 Apr 2006)

  14 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.3.37.ebuild,
  +nginx-0.3.38.ebuild:
  Bump.

  13 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> -nginx-0.3.12.ebuild,
  nginx-0.3.35.ebuild:
  Goes stable on amd64 and x86.

*nginx-0.3.37 (08 Apr 2006)

  08 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.37.ebuild,
  -nginx-0.3.36.ebuild:
  Version bump.

*nginx-0.3.36 (05 Apr 2006)

  05 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.36.ebuild:
  Version bump.

*nginx-0.3.35 (23 Mar 2006)

  23 Mar 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.35.ebuild,
  -nginx-0.3.34.ebuild:
  Bump.

*nginx-0.3.34 (22 Mar 2006)

  22 Mar 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.34.ebuild,
  +filles/nginx.conf-r2, -nginx-0.3.33.ebuild, -nginx-0.3.30.ebuild:
  Version bump. Default nginx.conf polished a bit.

*nginx-0.3.33 (16 Mar 2006)

  16 Mar 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.33.ebuild,
  -nginx-0.3.32.ebuild:
  Version bump.

*nginx-0.3.32 (11 Mar 2006)

  11 Mar 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.32.ebuild,
  -nginx-0.3.31.ebuild:
  Version bump.

*nginx-0.3.31 (10 Mar 2006)
