@@ -1,0 +1,3 @@
+MD5 dfbf1fd0c6b3c9932431386bdcaea960 nginx-0.3.43.tar.gz 391417
+RMD160 5e9d13b960dc935f5f34660cdd40c71d1c4ed4a3 nginx-0.3.43.tar.gz 391417
+SHA256 95147f4702405dc87d88bd6ee0f7c72af89c72dd627bcc7c5bde1d0d4767173b nginx-0.3.43.tar.gz 391417
