@@ -1,0 +1,72 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/nginx-0.3.43.ebuild,v 1.1 2006/04/26 15:31:57 voxus Exp $
+
+inherit eutils
+
+DESCRIPTION="Robust, small and high performance http and reverse proxy server"
+
+HOMEPAGE="http://sysoev.ru/nginx/"
+SRC_URI="http://sysoev.ru/nginx/${P}.tar.gz"
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE="debug fastcgi imap pcre perl threads ssl zlib"
+
+DEPEND="dev-lang/perl
+	pcre? ( >=dev-libs/libpcre-4.2 )
+	ssl? ( dev-libs/openssl )
+	zlib? ( sys-libs/zlib )
+	perl? ( >=dev-lang/perl-5.8 )"
+
+src_compile() {
+	local myconf
+
+	if use threads; then
+		einfo
+		ewarn "threads support is experimental at the moment"
+		ewarn "do not use it on production systems - you've been warned"
+		einfo
+		myconf="${myconf} --with-threads"
+	fi
+
+	use fastcgi	|| myconf="${myconf} --without-http_fastcgi_module"
+	use zlib	|| myconf="${myconf} --without-http_gzip_module"
+	use pcre	|| {
+		myconf="${myconf} --without-pcre --without-http_rewrite_module"
+	}
+	use debug	&& myconf="${myconf} --with-debug"
+	use ssl		&& myconf="${myconf} --with-http_ssl_module"
+	use imap	&& myconf="${myconf} --with-imap" # pop3/imap4 proxy support
+	use perl	&& myconf="${myconf} --with-http_perl_module"
+
+	./configure \
+		--prefix=/usr \
+		--conf-path=/etc/${PN}/${PN}.conf \
+		--http-log-path=/var/log/${PN}/access_log \
+		--error-log-path=/var/log/${PN}/error_log \
+		--pid-path=/var/run/${PN}.pid \
+		--http-client-body-temp-path=/var/tmp/${PN}/client \
+		--http-proxy-temp-path=/var/tmp/${PN}/proxy \
+		--http-fastcgi-temp-path=/var/tmp/${PN}/fastcgi \
+		--with-md5-asm --with-md5=/usr/include \
+		${myconf} || die "configure failed"
+
+	emake || die "failed to compile"
+}
+
+src_install() {
+	keepdir /var/log/${PN} /var/tmp/${PN}/{client,proxy,fastcgi}
+
+	dosbin objs/nginx
+	doinitd ${FILESDIR}/nginx
+
+	rm conf/nginx.conf
+	cp ${FILESDIR}/nginx.conf-r2 ${T}/nginx.conf
+
+	dodir /etc/${PN}
+	insinto /etc/${PN}
+	doins conf/* ${T}/nginx.conf
+
+	dodoc CHANGES{,.ru} LICENSE README
+}
