@@ -1,6 +1,12 @@
 # ChangeLog for www-servers/nginx
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.89 2006/04/26 14:55:59 voxus Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-servers/nginx/ChangeLog,v 1.90 2006/04/26 15:31:57 voxus Exp $
+
+*nginx-0.3.43 (26 Apr 2006)
+
+  26 Apr 2006; Konstantin Arkhipov <voxus@gentoo.org> +nginx-0.3.43.ebuild,
+  -nginx-0.3.42.ebuild:
+  One more time.
 
 *nginx-0.3.42 (26 Apr 2006)
 
